--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "dev": "storybook dev -p 6006",
     "build": "tsc && vite build",
     "build:storybook": "storybook build",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "lint": "yarn run lint:style && yarn run lint:types",
+    "lint:fix": "yarn run lint:fix:style && yarn run lint:fix:code",
+    "lint:style": "eslint --color --ext .ts,.tsx src/",
+    "lint:types": "tsc --noEmit --pretty",
+    "lint:fix:style": "prettier --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "lint:fix:code": "yarn run lint:style --fix"
   },
   "peerDependencies": {
     "react": ">=18.x",
@@ -51,7 +54,7 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "8",
+    "eslint": "^8",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "latest",
