--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-component-librarie-template",
+  "name": "vite-component-librarie-template-release-version",
   "version": "0.0.0",
   "type": "module",
   "files": [
@@ -79,5 +79,8 @@
     "vite": "4.3.9",
     "vite-plugin-dts": "^3.1.0",
     "vitest": "^0.33.0"
+  },
+  "dependencies": {
+    "release-please": "^15.11.2"
   }
 }
