--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - matejaVuradin/semanticPR_CI_Release
 jobs:
   maybe-release:
     name: release
@@ -69,7 +66,7 @@ jobs:
           with:
             apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
             accountId: 2238a825c5aca59233eab1f221f7aefb
-            projectName: "matejaweb"
+            projectName: "changeMe"
             directory: ./storybook-static
             gitHubToken: ${{ secrets.GITHUB_TOKEN }}
             branch: ${{ github.head_ref || github.ref_name }}
