--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "lint:style": "eslint --color --ext .ts,.tsx src/",
     "lint:types": "tsc --noEmit --pretty",
     "lint:fix:style": "prettier --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
-    "lint:fix:code": "yarn run lint:style --fix"
+    "lint:fix:code": "yarn run lint:style --fix",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "react": ">=18.x",
@@ -48,6 +50,10 @@
     "@storybook/react": "^7.0.26",
     "@storybook/react-vite": "^7.0.26",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -56,18 +62,22 @@
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "alpha",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
+    "happy-dom": "^10.1.1",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.26",
-    "typescript": "^5.0.2",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
     "vite": "4.3.9",
-    "vite-plugin-dts": "^3.1.0"
+    "vite-plugin-dts": "^3.1.0",
+    "vitest": "^0.33.0"
   }
 }
